--- a/index.html
+++ b/index.html
@@ -14,8 +14,60 @@
     <link rel="stylesheet" href="./fonts/fonts.css" />
 </head>
 <body>
-    <header>
-
+    <header class="page-header">
+        <div class="container header-container">
+            <nav class="header-nav-list">
+                <a href="./index.html" class="header-logo">watchcharm</a>
+                <ul class="nav-list">
+                    <li class="nav-list-item">
+                        <a href="#hero" class="nav-item-link">Home</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a href="#about-us" class="nav-item-link">About Us</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a href="#catalog" class="nav-item-link">Catalog</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a href="#sale" class="nav-item-link">Sale</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a href="#reviews" class="nav-item-link">Reviews</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a href="#contact-us" class="nav-item-link">Contact Us</a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="header-social-list">
+                <li class="header-social-item">
+                  <a href="https://www.facebook.com/goITclub/" class="header-social-item-link">
+                    <svg width="" height="" class="header-social-icon">
+                      <use href="../img/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="header-social-item">
+                  <a href="https://www.instagram.com/goitclub/" class="header-social-item-link">
+                    <svg width="" height="" class="header-social-icon">
+                      <use href="../img/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="header-social-item">
+                  <a href="https://www.youtube.com/c/GoIT" class="header-social-item-link">
+                    <svg width="20" height="20" class="header-social-icon">
+                      <use href="../img/icons.svg#icon-youtube"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            <button type="button" class="nav-btn-mobile">
+                <svg width="34" height="34" class="burger-icon">
+                    <use href="./img/icons.svg#icon-burger"></use>
+                </svg>
+            </button>
+        </div>
     </header>
     <main>
         <!-- REVIEWS -->
@@ -53,7 +105,7 @@
         <div class="container footer-container">
           <div class="footer-social-container">
             <div class="footer-ctn">
-            <a href="" class="footer-logo">watchcharm</a>
+            <a href="./index.html" class="footer-logo">watchcharm</a>
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a href="https://www.facebook.com/goITclub/" class="footer-social-item-link">
@@ -85,22 +137,22 @@
             <div class="footer-nav-list-container">
               <ul class="footer-nav-list">
                 <li class="footer-nav-item">
-                  <a href="" class="footer-nav-link">Home</a>
+                  <a href="#hero" class="footer-nav-link">Home</a>
                 </li>
                 <li class="footer-nav-item">
-                  <a href="" class="footer-nav-link">About Us</a>
+                  <a href="#about-us" class="footer-nav-link">About Us</a>
                 </li>
                 <li class="footer-nav-item">
-                  <a href="" class="footer-nav-link">Catalog</a>
+                  <a href="#catalog" class="footer-nav-link">Catalog</a>
                 </li>
                 <li class="footer-nav-item">
-                  <a href="" class="footer-nav-link">Sale</a>
+                  <a href="#sale" class="footer-nav-link">Sale</a>
                 </li>
                 <li class="footer-nav-item">
-                  <a href="" class="footer-nav-link">Reviews</a>
+                  <a href="#reviews" class="footer-nav-link">Reviews</a>
                 </li>
                 <li class="footer-nav-item">
-                  <a href="" class="footer-nav-link">Contact Us</a>
+                  <a href="#contact-us" class="footer-nav-link">Contact Us</a>
                 </li>
               </ul>
               <address class="footer-nav-address">1678 S. Pioneer Road Salt Lake City UT 84104</address>
