--- a/index.html
+++ b/index.html
@@ -70,6 +70,42 @@
         </div>
     </header>
     <main>
+        <!-- HERO -->
+        <section class="hero-section">
+            <div class="container hero-container">
+                <h1 class="hero-title">
+                    Welcome to our <span class="hero-title-style">collection</span> of premium watches
+                </h1>
+                <p class="hero-text">
+                    Our watches are not just timepieces, but also an expression of your personality and lifestyle. From classic designs to modern ones, we have a watch to suit every taste and occasion.
+                </p>
+                <div class="hero-img-ctn">
+                    <ul class="hero-img-list">
+                        <li class="hero-img-item">
+                            <img src="./img/hero/hero-img2.webp"
+                            srcset="./img/hero/hero-img2@2x.webp" alt="Victoria Romashenko">
+                        </li>
+                        <li class="hero-img-item">
+                            <img src="./img/hero/hero-img1.webp"
+                            srcset="./img/hero/hero-img1@2x.webp" alt="John Wax">
+                        </li>
+                        <li class="hero-img-item">
+                            <img src="./img/hero/hero-img3.webp"
+                            srcset="./img/hero/hero-img3@2x.webp" alt="Anastasia Trachuk">
+                        </li>
+                        <a href="#footer" class="srcoll">Scroll down</a>
+                    </ul>
+                </div>
+                <picture class="hero-img">
+                    <source media="(min-width: 1280px)" srcset="./img/hero/hero-watch-dt.jpg 1x,./img/hero/hero-watch-dt@2x.jpg 2x"/>
+                    <source media="(min-width: 768px)" srcset="./img/hero/hero-watch-tb.jpg 1x, ./img/hero/hero-watch-tb@2x.jpg 2x"/>
+                    <source media="(max-width: 767px)" srcset="./img/hero/hero-watch-mb.jpg 1x, ./img/hero/hero-watch-mb@2x.jpg 2x" />
+                    <img src="./img/hero/hero-watch-mb.jpg" alt="Watch" />
+                </picture>
+            </div>
+        </section>
+        <!-- HERO /-->
+
         <!-- REVIEWS -->
         <section class="reviews-section" id="reviews">
             <div class="container reviews-container">
